general/src/datascrubbing/snapshots/tests__explicit_fields_case_insensitive.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "MYSTUFF": null
  },
  "_meta": {
    "extra": {
      "MYSTUFF": {
        "": {
          "rem": [
            [
              "strip-fields",
              "x"
            ]
          ]
        }
      }
    }
  }
}
