general/src/datascrubbing/snapshots/tests__http_remote_addr_stripped.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "request": {
    "env": {
      "REMOTE_ADDR": null
    }
  },
  "_meta": {
    "request": {
      "env": {
        "REMOTE_ADDR": {
          "": {
            "rem": [
              [
                "@anything:remove",
                "x"
              ]
            ]
          }
        }
      }
    }
  }
}
