general/src/datascrubbing/snapshots/tests__querystring_as_pairlist_with_partials.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "request": {
    "query_string": [
      [
        "foo",
        "bar"
      ],
      [
        "password",
        null
      ],
      [
        "baz",
        "bar"
      ]
    ]
  },
  "_meta": {
    "request": {
      "query_string": {
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@password",
                  "x"
                ]
              ]
            }
          }
        }
      }
    }
  }
}
