general/src/datascrubbing/snapshots/tests__querystring_as_string.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "request": {
    "query_string": [
      [
        "foo",
        "bar"
      ],
      [
        "password",
        null
      ],
      [
        "the_secret",
        null
      ],
      [
        "a_password_here",
        null
      ],
      [
        "api_key",
        null
      ]
    ]
  },
  "_meta": {
    "request": {
      "query_string": {
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        },
        "3": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "x"
                ]
              ]
            }
          }
        }
      }
    }
  }
}
