general/src/datascrubbing/snapshots/tests__sanitize_additional_sensitive_fields.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "a_password_here": null,
    "apiKey": null,
    "api_key": null,
    "fieldy_field": null,
    "foo": "bar",
    "moar_other_field": null,
    "password": null,
    "the_secret": null
  },
  "_meta": {
    "extra": {
      "a_password_here": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "apiKey": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "api_key": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "fieldy_field": {
        "": {
          "rem": [
            [
              "strip-fields",
              "x"
            ]
          ]
        }
      },
      "moar_other_field": {
        "": {
          "rem": [
            [
              "strip-fields",
              "x"
            ]
          ]
        }
      },
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "the_secret": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      }
    }
  }
}
