general/src/datascrubbing/snapshots/tests__sanitize_credit_card_visa.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "[creditcard]"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@creditcard",
              "s",
              0,
              12
            ]
          ],
          "len": 16
        }
      }
    }
  }
}
